# server-http

./: .pre-commit-config.yaml  README.rst  entry-points.txt  pyproject.toml  setup.cfg  setup.py
nagare/server/: http_application.py  http_publisher.py
nagare/services/: http_exceptions.py  http_exceptions_handler.py
src/nagare/server/: http_application.py  http_publisher.py  openapi.py
src/nagare/services/: http_exceptions.py
