[metadata]
name = nagare-server-http
author = Net-ng
author_email = alain.poirier@net-ng.com
description = Nagare HTTP application server'
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
url = https://www.nagare.org
project_urls =
    Documentation = https://nagare.org/doc
    Source = https://github.com/nagareproject/server-http
    Tracker = https://github.com/nagareproject/server-http/issues

[options]
zip_safe = False
packages = find:
install_requires =
    WebOb
    ws4py
    nagare-services
    nagare-services-statics
    nagare-services-router
    nagare-server

[options.entry_points]
nagare.services =
    exceptions = nagare.services.http_exceptions:ExceptionsService

[bdist_wheel]
universal = 1

[flake8]
ignore = E501
exclude =
	.git,
	.eggs,
	doc
